traq-ing/base/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traq-ing-client
  namespace: traq-ing
  labels:
    app: traq-ing-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-ing-client
  template:
    metadata:
      labels:
        app: traq-ing-client
    spec:
      containers:
        - name: traq-ing-client
          image: ghcr.io/cp-20/traq-ing-client:1.2.4
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
            requests:
              memory: '256Mi'
              cpu: '250m'
          ports:
            - containerPort: 80
