traq-ing/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traq-ing-server
  namespace: traq-ing
  labels:
    app: traq-ing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-ing-server
  template:
    metadata:
      labels:
        app: traq-ing-server
    spec:
      containers:
        - name: traq-ing-server
          image: ghcr.io/cp-20/traq-ing-server:1.2.2
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: '2Gi'
              cpu: '2000m'
            requests:
              memory: '256Mi'
              cpu: '250m'
