traq-ing/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traq-ing-server
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: traq-ing-server
