traq-ing/base/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: traq-ing-client
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: traq-ing-client
